Add preview feature for the maven surefire plugin
Signed-off-by: cmoulliard <cmoulliard@redhat.com>